@@ -1,3 +1,5 @@
+2025-01-16
+    `Hostkey old product` group is not used animore
 2024-12-04
     When there is not the default currency
 2024-12-03
